# Vestra

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
Releases/vestra-v0.4.1/release/: libvestra.rlib
Releases/vestra-v0.4.1/release/.fingerprint/anstream-795337542e0c2430/: lib-anstream.json
binary/releasev0.3.0/.fingerprint/vestra-3e42160341744b3f/: bin-vestra
examples/: text.vs
root/: Cargo.toml  example.vs
root/bin_test/: .rustc_info.json
root/bin_test/release/.fingerprint/vestra-326e622b050dda26/: bin-vestra.json
root/bin_test/release/.fingerprint/vestra-d3629caba07d1f4c/: lib-vestra.json
root/src/: lib.rs  main.rs  parser.rs  tokenizer.rs  value.rs
root/vestra-v0.4.1/: .rustc_info.json
root/vestra-v0.4.1/release/.fingerprint/anstyle-319a8ccf41848125/: lib-anstyle
root/vestra-v0.4.1/release/.fingerprint/anstyle-query-0ec2b25140b6d7ad/: lib-anstyle_query
root/vestra-v0.4.1/release/.fingerprint/clap-2e918618bfa2c20a/: lib-clap
root/vestra-v0.4.1/release/.fingerprint/clap_lex-99c32fb14eeb2bc2/: lib-clap_lex.json
root/vestra-v0.4.1/release/.fingerprint/utf8parse-92507dd790123542/: lib-utf8parse.json
root/vestra-v0.4.1/release/.fingerprint/vestra-c6b76aba21cd7c03/: dep-lib-vestra
root/vestra-v0.4.1/release/.fingerprint/vestra-fab0ba66f959d913/: bin-vestra
source/binary/release/: libvestra.d
source/src/: interpreter.rs  token.rs
src/: interpreter.rs  lib.rs  main.rs  parser.rs  token.rs  tokenizer.rs  value.rs
(+15 files in other folders)
