[package]
name = "vestra"
version = "0.4.1"
edition = "2024"

description = "Vestra language support"
license = "MIT"
repository = "https://github.com/DrCodfish/vestra-interpreter"

[dependencies]
clap = "4.0"

# This section is optional but can be included to specify additional build dependencies if needed
[build-dependencies]
